[gd_scene load_steps=10 format=3 uid="uid://dt6m2v2orssxt"]

[ext_resource type="Script" uid="uid://blum2eoao3err" path="res://scripts/utils/checkpoint.gd" id="1_r8yjt"]
[ext_resource type="Texture2D" uid="uid://coxy3eugdsadn" path="res://assets/art/utils/Checkpoint.png" id="1_up50w"]
[ext_resource type="AudioStream" uid="uid://cbk74nme4v250" path="res://assets/sounds/soundfx/checkpoint.mp3" id="3_gwje6"]
[ext_resource type="AudioStream" uid="uid://ck5yh7isqqjl4" path="res://assets/sounds/soundfx/dogchekp1.mp3" id="4_3ob8i"]
[ext_resource type="AudioStream" uid="uid://mciowmiyyegn" path="res://assets/sounds/soundfx/dogchekp2.mp3" id="5_p20d6"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_r8yjt"]
radius = 12.0
height = 24.0

[sub_resource type="AtlasTexture" id="AtlasTexture_o4vow"]
atlas = ExtResource("1_up50w")
region = Rect2(0, 0, 148, 149)

[sub_resource type="AtlasTexture" id="AtlasTexture_w4f8b"]
atlas = ExtResource("1_up50w")
region = Rect2(0, 149, 148, 149)

[sub_resource type="SpriteFrames" id="SpriteFrames_gwje6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o4vow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w4f8b")
}],
"loop": true,
"name": &"default",
"speed": 1.0
}]

[node name="Checkpoint" type="Area2D"]
scale = Vector2(2, 2)
script = ExtResource("1_r8yjt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 32)
shape = SubResource("CapsuleShape2D_r8yjt")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.6, 0.6)
sprite_frames = SubResource("SpriteFrames_gwje6")
frame_progress = 0.30260482

[node name="SFX_Check" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_gwje6")

[node name="SFX_Bark1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_3ob8i")

[node name="SFX_Bark2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_p20d6")
